--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context="com.example.leiwang.messagecardview.activity.MainActivity">
-
 
     <android.support.v7.widget.Toolbar
     android:id="@+id/toolbar"
@@ -22,26 +20,13 @@
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     />
 
-<!--
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_layout"
-        android:layout_below="@+id/toolbar"
-        android:layout_width="match_parent"
+    <ProgressBar
+        android:id="@+id/progressbar_main"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:elevation="6dp"
-        android:minHeight="?attr/actionBarSize"
-        />
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
-        android:layout_below="@+id/tab_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        />
-
--->
+        android:layout_centerInParent="true"
+        android:visibility="visible" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/messageList"
