--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="fill_parent"
-android:layout_height="fill_parent"
+android:layout_width="320dp"
+android:layout_height="300dp"
 android:orientation="vertical" >
 
 
@@ -68,7 +68,7 @@ android:orientation="vertical" >
         android:id="@+id/login_forgot_password_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:text="@string/forgot_password" />
 </LinearLayout>
